# Content-Studio-Muscle-Meta

./: .gitignore  CLAUDE.md  DEPLOY.md  DEPLOYMENT.md  QUICKSTART.md  backend_test.py  contracts.md  render.yaml  test_result.md
.emergent/: emergent.yml
backend/: .env.example  admin.py  aeo_analyzer.py  assessment.py  assessment_routes.py  assets.py  auth.py  auth_routes.py  content.py  crf_integration.py  knowledge_base.py  matrix_models.py  mm_parser.py  models.py  payments.py  requirements.txt  research.py  seed_pickleball_course.py  server.py
crf-framework/: README.md  pyproject.toml  requirements.txt
crf-framework/api/: __init__.py  dependencies.py  main.py  router.py  schemas.py
crf-framework/api/routes/: __init__.py  assessments.py  recommendations.py
crf-framework/examples/: basic_assessment.py
crf-framework/integration/: README.md  __init__.py  database-schema.sql  db.py
crf-framework/integration/repositories/: __init__.py  assessment_repo.py  biomarker_repo.py  user_repo.py
crf-framework/src/crf/: __init__.py
crf-framework/src/crf/assessment/: __init__.py  calculator.py  recommendations.py  scoring.py
crf-framework/src/crf/instruments/: __init__.py  base.py  ewgsop2.py  must.py  sarcf.py
crf-framework/src/crf/models/: __init__.py  biomarkers.py  measurements.py  patient.py  risk_factors.py
crf-framework/src/crf/parsers/: __init__.py  biomarker_patterns.py  dexa_parser.py  lab_parser.py  normalizer.py  pdf_extractor.py
crf-framework/src/crf/utils/: __init__.py  helpers.py
crf-framework/src/crf/validators/: __init__.py  input_validator.py
crf-framework/tests/: __init__.py  test_calculator.py  test_instruments.py  test_parsers.py  test_scoring.py
frontend/: .env  .env.example  package.json
(+135 files in other folders)
